mylang/tests/fail/f8.pas
program

function func(var i: int): int
begin
    func := 1;
    func := func + 1
end;

begin
    writeln(func(1))
end@


